@@ -1,3 +1,4 @@
+Added animated thumbnail
 Added the ability to watch multiple students in different windows
 # null.null.00 (47924) Jan 12, 2011
 Made simsharing build and deploy as a Java simulation project
